package ca.mcmaster.se2aa4.island.team115;

import org.json.JSONObject;

public interface POIFinder {
    
    public JSONObject findPOIs(Direction direction);
}
